<resources>
    <string name="app_name">Android Uygulaması</string>
    <string name="message">Mesaj</string>
    <string name="send_message">Mesaj Gönder</string>
    <string name="connect">Bağlan</string>
    <string name="no_message">Henüz bir mesaj yok.</string>
    <string name="connecting">Bağlanıyor…</string>
    <string name="cannot_connect">Bağlantı yapılamadı.</string>
    <string name="clear">Temizle</string>
    <string name="sifre">Şifre</string>
    <string name="wrong_password">Şifre Hatalı</string>
</resources>
