<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/connect" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connectButton"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textPersonName"
            android:visibility="invisible" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/messageEditText"
            android:text="@string/send_message"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/messagesTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sendButton"
            android:layout_marginTop="45dp"
            android:hint="@string/no_message"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/connectingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scrollbars="vertical"
            android:text="@string/connecting"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sendButton"
            android:text="@string/clear"
            android:visibility="invisible" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>